[gd_scene load_steps=8 format=3 uid="uid://d1502cvemy1e6"]

[ext_resource type="PackedScene" uid="uid://dnqoa5ujl7hdk" path="res://scenes/player.tscn" id="1_71wst"]
[ext_resource type="Script" path="res://scripts/game.gd" id="1_l5i3a"]
[ext_resource type="Script" path="res://scenes/pause_menu.gd" id="2_6vacf"]
[ext_resource type="Texture2D" uid="uid://6al1skqr7psc" path="res://assets/BG.png" id="3_1wexe"]
[ext_resource type="AudioStream" uid="uid://clkj7qyj6pt30" path="res://assets/Audio/bgmSound.mp3" id="3_ttqbo"]
[ext_resource type="AudioStream" uid="uid://1nb00407gx2f" path="res://assets/Audio/gameOverSFX.mp3" id="4_dawk3"]

[sub_resource type="Curve2D" id="Curve2D_x8gey"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -72.0156, -130, 0, 0, 0, 0, 1230, -138, 0, 0, 0, 0, 1228, 731, 0, 0, 0, 0, -64, 718, 0, 0, 0, 0, -71, -128)
}
point_count = 5

[node name="Game" type="Node2D"]
script = ExtResource("1_l5i3a")

[node name="Player" parent="." instance=ExtResource("1_71wst")]
position = Vector2(569, 329)

[node name="ExperienceBar" parent="Player/GUILayer/GUI" index="0"]
offset_left = 19.0
offset_top = 721.0
offset_right = 1171.0
offset_bottom = 735.0

[node name="Time_Label" parent="Player/GUILayer/GUI" index="1"]
offset_left = -28.62
offset_top = -45.12
offset_right = 17.38
offset_bottom = -27.12

[node name="Path2D" type="Path2D" parent="Player"]
position = Vector2(-545.091, -305)
scale = Vector2(0.984627, 1)
curve = SubResource("Curve2D_x8gey")

[node name="PathFollow2D" type="PathFollow2D" parent="Player/Path2D"]
unique_name_in_owner = true
position = Vector2(-72.0156, -130)
rotation = -0.00614424

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -30

[node name="ColorRect" type="Sprite2D" parent="CanvasLayer"]
texture_filter = 6
texture_repeat = 2
position = Vector2(620, 341)
texture = ExtResource("3_1wexe")
region_enabled = true
region_rect = Rect2(-1.5, -0.5, 3000, 3000)

[node name="Timer" type="Timer" parent="."]
process_callback = 0
autostart = true

[node name="GameOver" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="GameOver"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.513726)

[node name="Label" type="Label" parent="GameOver/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -11.5
offset_right = 46.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 91
text = "GAME OVER"

[node name="Loot" type="Node2D" parent="." groups=["loot"]]
position = Vector2(570, 330)

[node name="TimeOut" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="TimeOut"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.513726)

[node name="Label" type="Label" parent="TimeOut/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -11.5
offset_right = 46.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 91
text = "TIME OUT"

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="pauseMenu" type="Control" parent="CanvasLayer2" node_paths=PackedStringArray("game")]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_6vacf")
game = NodePath("../..")

[node name="Panel" type="Panel" parent="CanvasLayer2/pauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.0
offset_top = -141.0
offset_right = 117.0
offset_bottom = 101.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer2/pauseMenu/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer2/pauseMenu/Panel/VBoxContainer"]
layout_mode = 2
text = "PAUSED"

[node name="ResumeButton" type="Button" parent="CanvasLayer2/pauseMenu/Panel/VBoxContainer"]
layout_mode = 2
text = "RESUME"

[node name="ExitToMainMenu" type="Button" parent="CanvasLayer2/pauseMenu/Panel/VBoxContainer"]
layout_mode = 2
text = "MAIN MENU
"

[node name="BgmSound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_ttqbo")

[node name="GameOverSfx" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_dawk3")

[node name="SoundGameOver" type="Timer" parent="."]

[connection signal="health_depleted" from="Player" to="." method="_on_player_health_depleted"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="visibility_changed" from="GameOver" to="." method="_on_game_over_visibility_changed"]
[connection signal="visibility_changed" from="TimeOut" to="." method="_on_game_over_visibility_changed"]
[connection signal="pressed" from="CanvasLayer2/pauseMenu/Panel/VBoxContainer/ResumeButton" to="CanvasLayer2/pauseMenu" method="_on_resume_button_pressed"]
[connection signal="pressed" from="CanvasLayer2/pauseMenu/Panel/VBoxContainer/ExitToMainMenu" to="CanvasLayer2/pauseMenu" method="_on_exit_to_main_menu_pressed"]
[connection signal="timeout" from="SoundGameOver" to="." method="_on_sound_game_over_timeout"]

[editable path="Player"]
